# Haomepage

./: .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  Makefile.toml  deny.toml  index.html  style.scss
.github/workflows/: deploy.yml
assets/: about.md  contact.md  now.md  style.scss
docs/: 404.html  haomepage-2ad00d00eaa20ee9.js  haomepage-2ad00d00eaa20ee9_bg.wasm  haomepage-32f80aa78eed615c.js  haomepage-32f80aa78eed615c_bg.wasm  index.html  style-ac68d83b4c17062e.css  style-ae27122f42615a80.css
public/: CNAME
src/: about.rs  contact.rs  footer.rs  header.rs  home.rs  main.rs  routes.rs
