[package]
name = "haomepage"
version = "1.2.0"
edition = "2024"
publish = false

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
dioxus-markdown = { git = "https://github.com/rambip/rust-web-markdown" }
